Configure djlint to auto-format templates

--- a/src/lz-web/templates/partials/bookmark_item.html
+++ b/src/lz-web/templates/partials/bookmark_item.html
@@ -1,20 +1,21 @@
-<article id="bookmark-{{item.bookmark.id.id()}}">
-  <div>{{item.bookmark.created_at}}</div>
-  <a href="{{item.bookmark.url}}">{{item.bookmark.title}}</a>
+<article id="bookmark-{{ item.bookmark.id.id() }}">
+  <div>{{ item.bookmark.created_at }}</div>
+  <a href="{{ item.bookmark.url }}">{{ item.bookmark.title }}</a>
   <section class="tags">
-    {% for tag in item.tags %}
-    <a href="#{{tag.name}}">{{tag.name}}</a>
-    {% endfor %}
+    {% for tag in item.tags %}<a href="#{{ tag.name }}">{{ tag.name }}</a>{% endfor %}
   </section>
   {% match item.bookmark.description %}
-  {% when Some with (description) %}
-  <blockquote>{{description}}</blockquote>
-  {% when None %}
+    {% when Some with (description) %}
+    <blockquote>
+      {{ description }}
+    </blockquote>
+    {% when None %}
   {% endmatch %}
-
   {% match item.bookmark.notes %}
-  {% when Some with (notes) %}
-  <blockquote>{{notes}}</blockquote>
-  {% when None %}
+    {% when Some with (notes) %}
+    <blockquote>
+      {{ notes }}
+    </blockquote>
+    {% when None %}
   {% endmatch %}
 </article>
