Bookmark editing on the webface
This looks awful, but it works pretty ~decently? It's absolutely
unstyled, but works just about the way I want it to and it's real
fast.

--- a/src/lz-web/templates/partials/bookmark_item.html
+++ b/src/lz-web/templates/partials/bookmark_item.html
@@ -18,4 +18,6 @@
     </blockquote>
     {% when None %}
   {% endmatch %}
+  <a target="htmz"
+     href="/edit?id={{- item.bookmark.id.id() -}}#bookmark-{{ item.bookmark.id.id() }}">edit</a>
 </article>
