Require that IdType be Display, implement it everywhere
This improves the look of templates, and will allow us to render
ID-less bookmarks in edit forms.

--- a/src/lz-web/templates/bookmark_edit_form.html
+++ b/src/lz-web/templates/bookmark_edit_form.html
@@ -1,14 +1,14 @@
 <html>
   <body>
     <form method="post"
-          id="bookmark-{{- item.bookmark.id.id() -}}"
-          action="#bookmark-{{- item.bookmark.id.id() -}}"
+          id="bookmark-{{- item.bookmark.id -}}"
+          action="#bookmark-{{- item.bookmark.id -}}"
           target="htmz">
       <section>
-        <input name="id" type="hidden" value="{{- item.bookmark.id.id() -}}">
+        <input name="id" type="hidden" value="{{- item.bookmark.id -}}">
         <input name="user_id"
                type="hidden"
-               value="{{- item.bookmark.user_id.id() -}}">
+               value="{{- item.bookmark.user_id -}}">
         <input name="created_at"
                type="hidden"
                value="{{- item.bookmark.created_at -}}">
