--- a/src/lz-web/templates/my_bookmarks.html
+++ b/src/lz-web/templates/my_bookmarks.html
@@ -3,7 +3,7 @@
     {% include "partials/bookmark_item.html" %}
   {% endfor %}
   {% match next_cursor %}
-    {% when Some(id) %}<a id="load-more" target="htmz" href="?cursor={{ id.id() }}#load-more">Next page</a>
+    {% when Some(id) %}<a id="load-more" target="htmz" href="?cursor={{ id }}#load-more">Next page</a>
     {% when None %}
   {% endmatch %}
 </div>
