Implement form for adding a(n untagged) URL
This is still pretty rudimentary, but it extracts descriptions from
existing URLs, like the CLI does (refactoring the CLI such that it
uses the same method).

--- a/src/lz-web/templates/my_bookmarks.html
+++ b/src/lz-web/templates/my_bookmarks.html
@@ -1,4 +1,10 @@
-<div "">
+    <div id="add-new">
+      <form method="get" action="/new">
+        <label for="new-url-entry">Add URL:</label>
+        <input type="text" name="url" id="new-url-entry">
+      </form>
+    </div>
+<div id="my-bookmarks">
   {% for item in batch %}
     {% include "partials/bookmark_item.html" %}
   {% endfor %}
