--- a/src/lz-web/templates/bookmark_edit_form.html
+++ b/src/lz-web/templates/bookmark_edit_form.html
@@ -1,23 +1,23 @@
 <html>
   <body>
     <form method="post"
-          id="bookmark-{{- item.bookmark.id -}}"
-          action="#bookmark-{{- item.bookmark.id -}}"
+          id="bookmark-{{- bookmark.id -}}"
+          action="#bookmark-{{- bookmark.id -}}"
           target="htmz">
       <section>
-        <input name="id" type="hidden" value="{{- item.bookmark.id -}}">
+        <input name="id" type="hidden" value="{{- bookmark.id -}}">
         <input name="user_id"
                type="hidden"
-               value="{{- item.bookmark.user_id -}}">
+               value="{{- bookmark.user_id -}}">
         <input name="created_at"
                type="hidden"
-               value="{{- item.bookmark.created_at -}}">
-        <input name="shared" type="hidden" value="{{- item.bookmark.shared -}}">
-        <input name="url" value="{{- item.bookmark.url -}}">
-        <input name="title" value="{{- item.bookmark.title -}}">
-        <textarea name="description">{{- item.bookmark.description.as_deref().unwrap_or(item.bookmark.website_description.as_deref().unwrap_or("")) -}}</textarea>
-        <textarea name="notes">{{- item.bookmark.notes.as_deref().unwrap_or("") -}}</textarea>
-        <input name="unread" type="checkbox" value="true" {{- item.bookmark.unread.then_some("checked").unwrap_or("") -}}>
+               value="{{- bookmark.created_at -}}">
+        <input name="shared" type="hidden" value="{{- bookmark.shared -}}">
+        <input name="url" value="{{- bookmark.url -}}">
+        <input name="title" value="{{- bookmark.title -}}">
+        <textarea name="description">{{- bookmark.description.as_deref().unwrap_or(bookmark.website_description.as_deref().unwrap_or("")) -}}</textarea>
+        <textarea name="notes">{{- bookmark.notes.as_deref().unwrap_or("") -}}</textarea>
+        <input name="unread" type="checkbox" value="true" {{- bookmark.unread.then_some("checked").unwrap_or("") -}}>
         <input type="submit" value="Save">
       </section>
     </form>
